# prismWriter

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run_web.bat
.github/: copilot-instructions.md
.github/workflows/: python-publish.yml
.streamlit/: config.toml
prismWriter/: __init__.py  gui.py  prism_writer.py  streamlit_app.py  web.py
prismWriter/schema/: prism5xmlschema.xml  prism5xmlstylesheet.xml
tests/: test_data.csv  test_gui.py  test_prism_read_output_stable.pkl  test_prism_writer.py
