[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prismWriter"
version = "1.0.0"
description = "Python library and GUI for programmatically creating and manipulating GraphPad Prism (.pzfx) files"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy",
    "pandas",
    "PySide2",
    "openpyxl",  # For Excel support
    "streamlit",  # For web interface
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[project.scripts]
prismwriter-gui = "prismWriter.gui:main"
prismwriter-web = "prismWriter.streamlit_app:main"

[project.urls]
Homepage = "https://github.com/yourusername/prismWriter"
Repository = "https://github.com/yourusername/prismWriter"

[tool.setuptools]
packages = ["prismWriter"]

[tool.setuptools.package-data]
prismWriter = ["*.pzfx", "schema/*.xml"]
