[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prismWriter"
version = "1.0.0"
description = "Python library for programmatically creating and manipulating GraphPad Prism (.pzfx) files"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "smestern"}
]
keywords = ["graphpad", "prism", "pzfx", "data visualization", "scientific", "pandas"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "openpyxl>=3.0",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.5",
]
web = [
    "streamlit>=1.20",
]
all = [
    "PySide6>=6.5",
    "streamlit>=1.20",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "flake8",
    "build",
    "twine",
]

[project.scripts]
prismwriter-gui = "prismWriter.gui:main"

[project.urls]
Homepage = "https://github.com/smestern/prismWriter"
Repository = "https://github.com/smestern/prismWriter"
Documentation = "https://github.com/smestern/prismWriter#readme"
"Bug Tracker" = "https://github.com/smestern/prismWriter/issues"

[tool.setuptools]
packages = ["prismWriter", "prismWriter.schema"]
include-package-data = true

[tool.setuptools.package-data]
prismWriter = ["*.pzfx", "schema/*.xml"]

[tool.black]
line-length = 100
target-version = [ "py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
